# clawlab

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  INIT.md  README.md  justfile
.agents/skills/runtime-sync/: SKILL.md
.devcontainer/: devcontainer.json
.github/skills/: runtime-sync
.github/skills/clawden-development/: SKILL.md
.github/skills/runtime-research/: SKILL.md
.github/workflows/: ci.yml  docker.yml
.husky/: pre-push
crates/clawden-adapters/: Cargo.toml
crates/clawden-adapters/src/: docker_runtime.rs  lib.rs  nanoclaw.rs  openclaw.rs  openfang.rs  picoclaw.rs  registry.rs  zeroclaw.rs
crates/clawden-cli/: Cargo.toml
crates/clawden-cli/src/: cli.rs  main.rs  util.rs
crates/clawden-cli/src/commands/: channels.rs  config.rs  config_gen.rs  dashboard.rs  docker.rs  doctor.rs  init.rs  install.rs  logs.rs  mod.rs  providers.rs  ps.rs  restart.rs  run.rs  start.rs  stop.rs  telegram.rs  tools.rs  up.rs  workspace.rs
crates/clawden-cli/tests/: config_env.rs  config_show.rs  docker_entrypoint.rs  docker_fake.rs  feishu_channels.rs  init_wizard.rs  install_outdated.rs  providers.rs  run_ergonomics.rs  workspace_env.rs  workspace_restore.rs
crates/clawden-config/: Cargo.toml
crates/clawden-config/src/: lib.rs
crates/clawden-core/: Cargo.toml
crates/clawden-core/src/: audit.rs  channel_registry.rs  channels.rs  install.rs  lib.rs  manager.rs  process.rs  provider_registry.rs  runtime_descriptor.rs  util.rs
crates/clawden-server/: Cargo.toml
crates/clawden-server/src/: api.rs  audit.rs  channels.rs  main.rs  manager.rs  proxy.rs
crates/clawlab-adapters/src/: lib.rs
crates/clawlab-cli/: Cargo.toml
crates/clawlab-cli/src/: main.rs
dashboard/: index.html  package.json  vite.config.ts
dashboard/src/: App.tsx
docker/: .env.example  Dockerfile  docker-compose.yml  entrypoint.sh
sdk/: package.json
specs/001-clawlab-mvp/: README.md
specs/002-project-setup/: README.md
specs/003-vision-agent/: README.md
specs/004-recorder/: README.md
specs/005-renderer/: README.md
specs/006-cli/: README.md
specs/007-interfaces/: README.md
specs/008-prompts/: README.md
specs/009-orchestration-platform/: README.md
specs/010-claw-runtime-interface/: README.md
specs/011-control-plane/: README.md
specs/012-fleet-orchestration/: README.md
specs/013-config-management/: README.md
specs/014-dashboard/: README.md
specs/015-developer-sdk/: README.md
specs/016-project-setup/: README.md
specs/017-docker-runtime-images/: README.md
specs/018-channel-support-matrix/: README.md
specs/019-npm-publishing/: README.md
specs/020-dashboard-ui-ux-enhancement/: README.md
specs/021-runtime-channel-dashboard/: README.md
specs/022-direct-install/: README.md
specs/023-cli-direct-architecture/: README.md
specs/024-built-in-tool-layer/: README.md
specs/025-llm-provider-api-key-management/: README.md
specs/026-guided-onboarding/: README.md
specs/027-docker-compose-ux/: README.md
specs/028-runtime-pull-update/: README.md
specs/029-docker-mode-config-injection/: README.md
specs/030-log-lifecycle-hygiene/: README.md
specs/031-direct-mode-config-injection/: README.md
specs/033-product-positioning/: README.md
specs/034-cli-runtime-ergonomics/: README.md
specs/035-run-command-ux-polish/: README.md
specs/036-run-clean-passthrough/: README.md
specs/037-cli-docker-subcommand-ux-overhaul/: README.md
specs/038-proxy-auto-detection/: README.md
specs/039-zeroclaw-security-defaults-compat/: README.md
specs/040-runtime-smoke-test-matrix/: README.md
specs/041-runtime-descriptor-refactor/: README.md
specs/042-openclaw-telegram-config-parity/: README.md
specs/043-rust-codebase-structural-refactor/: README.md
specs/044-openclaw-provider-model-routing/: README.md
specs/045-feishu-direct-mode-config-fix/: README.md
specs/046-cli-registry-decoupling/: README.md
specs/047-cli-security-profile-flag/: README.md
specs/048-telegram-username-id-resolution/: README.md
specs/050-agent-fleet-execution-layer/: README.md
specs/050-docker-runtime-direct-run-ux/: README.md
specs/051-openclaw-docker-silent-exit/: README.md
specs/052-docker-image-runtime-binary-compat/: README.md
specs/053-agent-workspace-persistence/: README.md
specs/054-agent-fleet-execution-layer/: README.md
specs/055-docker-image-hardening/: README.md
specs/056-runtime-image-repository-tagging/: README.md
specs/057-runtime-workspace-path-resolution/: README.md
specs/060-agent-fleet-identity-auth/: README.md
specs/061-local-agent-identity-auth/: README.md
specs/062-remote-agent-enrollment-control-plane/: README.md
specs/063-operator-auth-audit-rbac/: README.md
specs/067-advanced-coordination-patterns/: README.md
specs/068-ai-native-coordination-primitives/: README.md
specs/069-ai-native-domain-playbooks/: README.md
specs/070-sdd-ai-native-playbook/: README.md
specs/071-nemosis-teacher-student-distillation/: README.md
specs/085-coordination-model-formal-theory/: README.md
(+18 files in other folders)
