[workspace]
members = [
  "crates/clawden-core",
  "crates/clawden-server",
  "crates/clawden-cli",
  "crates/clawden-config",
  "crates/clawden-adapters",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
clap = {version = "4.5", features = ["derive"]}
dialoguer = {version = "0.11", features = ["fuzzy-select"]}
dotenvy = "0.15"
indicatif = "0.17"
reqwest = {version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"]}
semver = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = {version = "1.44", features = ["macros", "rt-multi-thread", "signal"]}
toml = "0.8"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
