[package]
name = "clawden-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["openclaw", "zeroclaw", "picoclaw", "nanoclaw"]
openclaw = []
zeroclaw = []
picoclaw = []
nanoclaw = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clawden-core = { path = "../clawden-core" }
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
