[package]
edition.workspace = true
license.workspace = true
name = "clawden-cli"
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
clawden-adapters = {path = "../clawden-adapters"}
clawden-config = {path = "../clawden-config"}
clawden-core = {path = "../clawden-core"}
reqwest.workspace = true
tokio.workspace = true
