[package]
edition.workspace = true
license.workspace = true
name = "clawden-cli"
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
clawden-adapters = {path = "../clawden-adapters"}
clawden-config = {path = "../clawden-config"}
clawden-core = {path = "../clawden-core"}
dialoguer.workspace = true
indicatif.workspace = true
reqwest.workspace = true
rpassword = "7.3"
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
