[package]
edition.workspace = true
license.workspace = true
name = "clawden-cli"
version.workspace = true

[[bin]]
name = "clawden"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clawden-adapters = {path = "../clawden-adapters"}
clawden-config = {path = "../clawden-config"}
clawden-core = {path = "../clawden-core"}
dialoguer.workspace = true
dotenvy.workspace = true
indicatif.workspace = true
open.workspace = true
regex-lite = "0.1"
reqwest.workspace = true
rpassword = "7.3"
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
