[package]
edition.workspace = true
license.workspace = true
name = "clawden-core"
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
sevenz-rust.workspace = true
sha2.workspace = true
thiserror.workspace = true
