[package]
name = "clawden-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
clawden-adapters = { path = "../clawden-adapters" }
clawden-core = { path = "../clawden-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
